--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,11 +1,26 @@
 {
-  "short_name": "scorer-ui-kit",
-  "name": "scorer-ui-kit",
+  "short_name": "SCORER App",
+  "name": "SCORER App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon-16-x-16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-32-x-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-64-x-64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-192-x-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
