--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "link": "npm link"
   },
   "peerDependencies": {
     "react": "^16.0.0",
