--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.0.7",
-  "description": "Made with create-react-library",
+  "version": "1.0.8",
+  "description": "SCORER UI Components",
   "author": "JoshLipps",
   "license": "ISC",
   "repository": {
