--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "SCORER UI Components",
   "author": "JoshLipps",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/future-standard/scorer-ui-kit.git"
