--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
@@ -45,6 +46,7 @@
     "@types/jest": "^25.1.4",
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
@@ -62,6 +64,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "storybook-dark-mode": "^0.4.1",
     "styled-components": "^5.1.0"
