--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "deploy": "gh-pages -d example/build",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook",
-    "link": "npm link && npm link react && npm link react-dom && npm link styled-components"
+    "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components"
   },
   "peerDependencies": {
     "react": "^16.0.0",
@@ -81,5 +81,7 @@
     "url": "https://github.com/future-standard/scorer-ui-kit/issues"
   },
   "homepage": "https://github.com/future-standard/scorer-ui-kit#readme",
-  "bin" : { "link-ui-kit" : "./link-ui-kit.sh" }
+  "bin": {
+    "link-ui-kit": "./link-ui-kit.sh"
+  }
 }
