--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0"
   },
