--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scorer-ui-kit",
   "version": "1.1.17",
   "description": "SCORER UI Components",
-  "author": "JoshLipps",
+  "author": "Josh Lipps",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -60,6 +60,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-react-hooks": "2.4.0",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.8",
     "npm-run-all": "^4.1.5",
