--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-react-hooks": "2.4.0",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.8",
     "npm-run-all": "^4.1.5",
@@ -75,7 +75,9 @@
     "dist",
     "link-ui-kit.sh"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "immutability-helper": "^3.1.1"
+  },
   "directories": {
     "example": "example"
   },
