--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit-example",
-  "homepage": "https://JoshLipps.github.io/scorer-ui-kit",
+  "homepage": "https://future-standard.github.io/scorer-ui-kit/",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
