--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
+    "prepublishOnly": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:lint": "eslint .",
@@ -29,8 +29,8 @@
     "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.13.1",
+    "react": "16.31.1",
+    "react-dom": "16.13.1",
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0"
   },
@@ -56,7 +56,6 @@
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.8",
     "npm-run-all": "^4.1.5",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
