--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components"
   },
   "peerDependencies": {
-    "react": "16.31.1",
+    "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0"
@@ -56,7 +56,8 @@
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.8",
     "npm-run-all": "^4.1.5",
-    "react-dom": "^16.13.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "styled-components": "^5.1.0"
