--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.2.7",
+  "version": "1.3.1",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
@@ -32,7 +32,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
