--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0",
-    "react-router": "^5.2.0"
+    "react-router": "^5.2.0",
+    "react-use-websocket":"2.1.1"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
@@ -61,6 +62,7 @@
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-use-websocket": "2.1.1",
     "styled-components": "^5.1.0"
   },
   "files": [
