--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.4.1",
+  "version": "1.4.2-beta.0",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
@@ -34,7 +34,7 @@
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-router": "^5.2.0",
-    "react-use-websocket":"2.1.1"
+    "react-use-websocket": "2.1.1"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
