--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.4.9-beta.10",
+  "version": "1.4.9-beta.11",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
@@ -29,8 +29,8 @@
     "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-router": "^5.2.0",
