--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   "peerDependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.1.0",
-    "react-router-dom": "^5.2.0",
     "react-router": "^5.2.0",
-    "react-use-websocket": "2.1.1"
+    "react-router-dom": "^5.2.0",
+    "react-use-websocket": "2.1.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
