--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "link-ui-kit.sh"
   ],
   "dependencies": {
+    "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
     "immutability-helper": "^3.1.1"
   },
