--- a/storybook/package.json
+++ b/storybook/package.json
@@ -23,15 +23,16 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.21",
+    "@storybook/addon-actions": "6.1.21",
+    "@storybook/addon-knobs": "6.1.21",
+    "@storybook/addon-links": "6.1.21",
+    "@storybook/addons": "6.1.21",
+    "@storybook/preset-create-react-app": "3.1.7",
+    "@storybook/react": "6.1.21",
     "storybook-dark-mode": "^1.0.3"
   },
   "scripts": {
+    "start": "npm run storybook",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook --output-dir ../example/build/storybook"
   },
