--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "styled-components": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-router": "^5.2.0",
-    "react-use-websocket": "2.1.1",
-    "@future-standard/icons": "^1.0.2"
+    "react-use-websocket": "2.1.1"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
@@ -73,7 +72,8 @@
   "dependencies": {
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
-    "immutability-helper": "^3.1.1"
+    "immutability-helper": "^3.1.1",
+    "@future-standard/icons": "^1.0.2"
   },
   "directories": {
     "example": "example"
