--- a/package.json
+++ b/package.json
@@ -70,10 +70,10 @@
     "link-ui-kit.sh"
   ],
   "dependencies": {
+    "@future-standard/icons": "^1.0.5",
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
-    "immutability-helper": "^3.1.1",
-    "@future-standard/icons": "^1.0.3"
+    "immutability-helper": "^3.1.1"
   },
   "directories": {
     "example": "example"
