Fix warning in storybook

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "link-ui-kit.sh"
   ],
   "dependencies": {
-    "@future-standard/icons": "^1.0.5",
+    "@future-standard/icons": "github:future-standard/icons#private",
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
     "immutability-helper": "^3.1.1"
