change file references to normal npm references

--- a/example/package.json
+++ b/example/package.json
@@ -12,14 +12,15 @@
     "history": "^5.0.0",
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.1.1",
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-i18next": "^11.4.0",
-    "react-router": "file:../node_modules/react-router",
-    "react-router-dom": "file:../node_modules/react-router-dom",
     "react-scripts": "^3.4.3",
     "scorer-ui-kit": "file:..",
-    "styled-components": "file:../node_modules/styled-components",
+    "styled-components": "^5.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.0",
+    "react-use-websocket": "2.1.1",
     "typescript": "^4.0.2"
   },
   "scripts": {
