--- a/storybook/package.json
+++ b/storybook/package.json
@@ -16,11 +16,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-i18next": "^11.4.0",
-    "react-router": "file:../node_modules/react-router",
-    "react-router-dom": "file:../node_modules/react-router-dom",
+    "styled-components": "^5.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.0",
+    "react-use-websocket": "2.1.1",
     "react-scripts": "^3.4.1",
     "scorer-ui-kit": "file:..",
-    "styled-components": "file:../node_modules/styled-components",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
