--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,57 +5,57 @@ on:
     branches: [ 'main', 'demo']
 
 jobs:
-  deploy:
+  # deploy:
 
-    runs-on: ubuntu-latest
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+  #   steps:
+  #   - uses: actions/checkout@v2
 
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
+  #   - name: Use Node.js
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: '12.x'
 
-    # - name: Cache node modules
-    #   uses: actions/cache@v2
-    #   env:
-    #     cache-name: cache-node-modules
-    #   with:
-    #     # npm cache files are stored in `~/.npm` on Linux/macOS
-    #     path: ~/.npm
-    #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-build-${{ env.cache-name }}-
-    #       ${{ runner.os }}-build-
-    #       ${{ runner.os }}-
+  #   # - name: Cache node modules
+  #   #   uses: actions/cache@v2
+  #   #   env:
+  #   #     cache-name: cache-node-modules
+  #   #   with:
+  #   #     # npm cache files are stored in `~/.npm` on Linux/macOS
+  #   #     path: ~/.npm
+  #   #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #   #     restore-keys: |
+  #   #       ${{ runner.os }}-build-${{ env.cache-name }}-
+  #   #       ${{ runner.os }}-build-
+  #   #       ${{ runner.os }}-
 
-    - name: Install Deps
-      run: npm install
+  #   - name: Install Deps
+  #     run: npm install
 
 
-    - name: Build library
-      run: npm run build
+  #   - name: Build library
+  #     run: npm run build
 
-    - name: remove node modules
-      run: rm -rf node_modules
+  #   - name: remove node modules
+  #     run: rm -rf node_modules
 
-    - name: Build example
-      run: |
-        cd example
-        npm install
-        npm run build
+  #   - name: Build example
+  #     run: |
+  #       cd example
+  #       npm install
+  #       npm run build
 
-    - name: remove node modules
-      run: rm -rf node_modules
+  #   - name: remove node modules
+  #     run: rm -rf node_modules
 
-    - name: Build storybook
-      run: |
-        cd storybook
-        npm install
-        npm run build-storybook
-    - name: Deploy GH Pages
-      run: npm run deploy
+  #   - name: Build storybook
+  #     run: |
+  #       cd storybook
+  #       npm install
+  #       npm run build-storybook
+  #   - name: Deploy GH Pages
+  #     run: npm run deploy
 
   lint:
 
