--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Deploy gh-pages
+# name: Deploy gh-pages
 
-on:
-  push:
-    branches: [ 'main', 'demo']
+# on:
+#   push:
+#     branches: [ 'main', 'demo']
 
-jobs:
+# jobs:
   # deploy:
 
   #   runs-on: ubuntu-latest
@@ -57,33 +57,3 @@ jobs:
   #   - name: Deploy GH Pages
   #     run: npm run deploy
 
-  lint:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-
-    - name: Cache node modules
-      uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
-      with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-
-    - name: Install Deps
-      run: npm install
-
-    - name: eslint
-      run: npm run test:lint
