--- a/example/package.json
+++ b/example/package.json
@@ -4,23 +4,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.36",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.0",
     "history": "^5.0.0",
     "i18next": "^19.4.2",
     "i18next-browser-languagedetector": "^4.1.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "react-i18next": "^11.4.0",
     "react-scripts": "^3.4.3",
     "scorer-ui-kit": "file:..",
-    "styled-components": "^5.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-router": "^5.2.0",
-    "react-use-websocket": "2.1.1",
     "typescript": "^4.0.2"
   },
   "scripts": {
@@ -30,6 +24,14 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "externals": {
+    "react": "react",
+    "react-dom": "react-dom",
+    "react-router": "react-router",
+    "react-router-dom": "react-router-dom",
+    "react-use-websocket": "react-use-websocket",
+    "styled-components": "styled-components"
   },
   "browserslist": [
     ">0.2%",
