--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,29 +32,30 @@ jobs:
 
     - name: Install Deps
       run: npm install
+      #
+      #
+      #    - name: Build library
+      #      run: npm run build
+      #
+      #    - name: remove node modules
+      #      run: rm -rf node_modules
+      #
+      #    - name: Build example
+      #      run: |
+      #        cd example
+      #        npm install
+      #        npm run build
+      #
+      #    - name: remove node modules
+      #      run: rm -rf node_modules
+      #
+      #    - name: Build storybook
+      #      run: |
+      #        cd storybook
+      #        npm install
+      #        npm run build-storybook
 
-
-    - name: Build library
-      run: npm run build
-
-    - name: remove node modules
-      run: rm -rf node_modules
-
-    - name: Build example
-      run: |
-        cd example
-        npm install
-        npm run build
-
-    - name: remove node modules
-      run: rm -rf node_modules
-
-    - name: Build storybook
-      run: |
-        cd storybook
-        npm install
-        npm run build-storybook
-
-    # - name: Deploy GH Pages
-    #   run: npm run deploy
-
+    - name: Deploy GH Pages
+      run: npm run deploy
+      env:
+        GITHUB_TOKEN : ${{ secrets.GITHUB_TOKEN }}
