--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,30 +32,31 @@ jobs:
 
     - name: Install Deps
       run: npm install
-      #
-      #
-      #    - name: Build library
-      #      run: npm run build
-      #
-      #    - name: remove node modules
-      #      run: rm -rf node_modules
-      #
-      #    - name: Build example
-      #      run: |
-      #        cd example
-      #        npm install
-      #        npm run build
-      #
-      #    - name: remove node modules
-      #      run: rm -rf node_modules
-      #
-      #    - name: Build storybook
-      #      run: |
-      #        cd storybook
-      #        npm install
-      #        npm run build-storybook
+
+    - name: Build library
+      run: npm run build
+
+    - name: remove node modules
+      run: rm -rf node_modules
+
+    - name: Build example
+      run: |
+        cd example
+        npm install
+        npm run build
+
+    - name: remove node modules
+      run: rm -rf node_modules
+
+    - name: Build storybook
+      run: |
+        cd storybook
+        npm install
+        npm run build-storybook
 
     - name: Deploy GH Pages
-      run: npm run deploy
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        npm run actions-deploy -- -u "github-actions-bot <support+actions@github.com>"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
