Remove test files and update the correct deploy branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy gh-pages
 
 on:
   push:
-    branches: [ 'feature/automatic-deploy' ]
+    branches: [ 'main', 'demo']
 
 jobs:
   deploy:
