Feature/slider improvements (#84)
* Update the style in Duration slider

* Add throttle to slider component for performance

* Add capabilites to run production build on local for storybook

* Update Slider behaivour to show ghost Thumb in onlyMarkSelect

* Remove trailing space

--- a/storybook/package.json
+++ b/storybook/package.json
@@ -36,7 +36,9 @@
   "scripts": {
     "start": "npm run storybook",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook --output-dir ../example/build/storybook"
+    "build-storybook": "build-storybook --output-dir ../example/build/storybook",
+    "build-storybook-dev": "build-storybook --output-dir ./build",
+    "serve": "npx serve build"
   },
   "eslintConfig": {
     "extends": "react-app"
