--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           tag: beta
-          dry-run: true
+          # dry-run: true
