--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "@types/lodash.defaultsdeep": "^4.6.6",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -74,7 +75,8 @@
     "@future-standard/icons": "^1.0.5",
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
-    "immutability-helper": "^3.1.1"
+    "immutability-helper": "^3.1.1",
+    "lodash.defaultsdeep": "^4.6.1"
   },
   "directories": {
     "example": "example"
