--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.5.2",
+  "version": "1.5.2.beta.1",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
