--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.5.3-beta.1",
+  "version": "1.5.3",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
