--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
     "@types/jest": "^25.1.4",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.defaultsdeep": "^4.6.6",
+    "@types/lodash.isequal": "^4.5.0",
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
     "@types/react-router-dom": "^5.1.5",
@@ -76,11 +78,13 @@
     "link-ui-kit.sh"
   ],
   "dependencies": {
-    "@future-standard/icons": "^1.0.6",
+    "@future-standard/icons": "^1.1.0",
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
     "immutability-helper": "^3.1.1",
-    "lodash.defaultsdeep": "^4.6.1"
+    "lodash.debounce": "^4.0.6",
+    "lodash.defaultsdeep": "^4.6.1",
+    "lodash.isequal": "^4.5.0"
   },
   "directories": {
     "example": "example"
