--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.7.0-beta.1",
+  "version": "1.7.0-beta.2",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
@@ -35,7 +35,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-use-websocket": "2.1.1",
+    "react-use-websocket": "^2.2.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
