--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-use-websocket": "2.1.1",
+    "react-use-websocket": "^2.2.0",
     "styled-components": "^5.2.1"
   },
   "files": [
@@ -78,7 +78,7 @@
     "link-ui-kit.sh"
   ],
   "dependencies": {
-    "@future-standard/icons": "^1.1.0",
+    "@future-standard/icons": "^1.1.1",
     "@types/react-dom": "^17.0.0",
     "date-fns": "^2.16.1",
     "immutability-helper": "^3.1.1",
