--- a/storybook/package.json
+++ b/storybook/package.json
@@ -25,6 +25,7 @@
     "@storybook/addons": "6.1.21",
     "@storybook/preset-create-react-app": "3.1.7",
     "@storybook/react": "6.1.21",
+    "storybook-addon-jsx": "^7.3.14",
     "storybook-dark-mode": "^1.0.3"
   },
   "scripts": {
