--- a/storybook/package.json
+++ b/storybook/package.json
@@ -26,7 +26,8 @@
     "@storybook/preset-create-react-app": "3.1.7",
     "@storybook/react": "6.1.21",
     "storybook-addon-jsx": "^7.3.14",
-    "storybook-dark-mode": "^1.0.3"
+    "storybook-dark-mode": "^1.0.3",
+    "storybook-zeplin": "^1.7.2"
   },
   "scripts": {
     "start": "npm run storybook",
