--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -24,9 +24,9 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "svgr": "svgr --typescript -d src/svg/ src/svg",
-    "predeploy": "cd example && npm install && npm run build && cd ../storybook && npm install && npm run build-storybook",
-    "deploy": "gh-pages -d example/build",
-    "actions-deploy": "gh-pages -d example/build",
+    "predeploy": "cd ../example && npm run build && cd ../storybook && npm run build-storybook",
+    "deploy": "gh-pages -d ../example/build",
+    "actions-deploy": "gh-pages -d ../example/build",
     "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components",
     "zeplin-connect": "zeplin connect"
   },
