Update automatic publising using ui-lib package.json

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy gh-pages
 
 on:
   push:
-    branches: [ 'main', 'demo', 'deploy-test3', 'beta/dark-mode-workspaces-update']
+    branches: [ 'main', 'demo', 'deploy-test3']
 
 jobs:
   deploy:
