--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.9.0-beta",
+  "version": "1.9.0-beta.1",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
