--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -18,14 +18,16 @@
     "typescript": "^4.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.1.21",
-    "@storybook/addon-knobs": "6.1.21",
-    "@storybook/addon-links": "6.1.21",
-    "@storybook/addons": "6.1.21",
-    "@storybook/preset-create-react-app": "3.1.7",
-    "@storybook/react": "6.1.21",
+    "@storybook/addon-actions": "6.4.0",
+    "@storybook/addon-knobs": "6.4.0",
+    "@storybook/addon-links": "6.4.0",
+    "@storybook/addons": "6.4.0",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/preset-create-react-app": "4.1.2",
+    "@storybook/react": "6.4.22",
     "storybook-addon-jsx": "^7.3.14",
-    "storybook-dark-mode": "^1.0.3"
+    "storybook-dark-mode": "^1.1.0"
   },
   "scripts": {
     "start": "npm run storybook",
