--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -32,7 +32,8 @@
     "react-router": "react-router",
     "react-router-dom": "react-router-dom",
     "react-use-websocket": "react-use-websocket",
-    "styled-components": "styled-components"
+    "styled-components": "styled-components",
+    "eslint-config-react-app": "eslint-config-react-app"
   },
   "browserslist": [
     ">0.2%",
