--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.5",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.25",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.8",
+    "@types/node": ">=16.11.7",
+    "@types/react": ">=17.0.0",
+    "@types/react-dom": ">=17.0.0",
+    "@types/styled-components": "^5.1.26",
     "history": "^5.3.0",
-    "i18next": "^21.8.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "react-i18next": "^11.18.3",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "react-i18next": "^11.18.4",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.4"
   },
