--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -4,29 +4,27 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@future-standard/icons": "^1.1.5",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.25",
+    "@future-standard/icons": "github:future-standard/icons#feature/script-update",
+    "@types/jest": "^28.1.8",
+    "@types/node": ">=16.11.7",
+    "@types/react": ">=17.0.0",
+    "@types/react-dom": ">=17.0.60",
+    "@types/styled-components": "^5.1.26",
     "history": "^5.3.0",
-    "i18next": "^21.8.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "react-i18next": "^11.18.3",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "react-i18next": "^11.18.4",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.4.22",
-    "@storybook/addon-knobs": "6.4.0",
-    "@storybook/addon-links": "6.4.22",
-    "@storybook/addons": "6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/addons": "6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/preset-create-react-app": "4.1.2",
-    "@storybook/react": "6.4.22",
-    "storybook-addon-jsx": "^7.3.14",
+    "@storybook/react": "6.5.10",
     "storybook-dark-mode": "^1.1.0"
   },
   "scripts": {
