--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -31,11 +31,11 @@
     "zeplin-connect": "zeplin connect"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.3.1",
-    "react-router-dom": "^5.2.0",
-    "react-use-websocket": "^2.9.1",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-use-websocket": "^4.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -45,9 +45,9 @@
     "@types/lodash.defaultsdeep": "^4.6.7",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.25",
+    "@types/react": ">=17.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "@zeplin/cli": "^1.1.12",
@@ -66,19 +66,19 @@
     "gh-pages": "^4.0.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-use-websocket": "^2.9.1",
+    "react-use-websocket": "^4.2.0",
     "styled-components": "^5.3.5"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@future-standard/icons": "^1.1.5",
-    "@types/react-dom": "^17.0.0",
+    "@future-standard/icons": "github:future-standard/icons#feature/script-update",
+    "@types/react-dom": ">=17.0.0",
     "date-fns": "^2.29.1",
     "immutability-helper": "^3.1.1",
     "lodash.debounce": "^4.0.7",
