--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "zeplin-connect": "zeplin connect"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.2 || ^18.0.0",
+    "react-dom": "^17.0.2 || ^18.0.0",
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-use-websocket": "^2.9.1",
