--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -8,8 +8,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
       - run: npm install
@@ -18,4 +18,5 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           tag: beta
           package: ./packages/ui-lib/package.json
+          ignore-scripts: false
           # dry-run: true
