--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -15,12 +15,13 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react-i18next": "^11.18.3",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9"
   },
   "devDependencies": {
     "@storybook/addon-actions": "6.4.22",
     "@storybook/addon-knobs": "6.4.0",
     "@storybook/addon-links": "6.4.22",
+    "@storybook/addon-controls": "6.3.12",
     "@storybook/addons": "6.4.22",
     "@storybook/builder-webpack5": "^6.4.22",
     "@storybook/manager-webpack5": "^6.4.22",
