Feature/external css plus v1 updates (#437)
* Add base css external

* Adding temporary color-script to be deleted

* Remove confusing path for review

* Add Better templating on script

* Update replace script to make one dictionary from another

* Update new theme with replaced variables

* Add beta tag for theme test release

* Add update in actions for beta publish

* Update variables with radix context

* Bump v2.1.0-beta.2

* Fix gray-11- typo in css variables

* Bump v2.1.0-beta.3

* Remove DarkTheme related items

* Remove css variables root and only use class

* Turn back styles to base update with variables

* Documentation update for css theme variables

* Bump v2.1.0-beta.4

* Update all places where background was gray-2

* Fix shadow boxes on inputs

* Fix switch and Icons colors

* Color correction for typography

* Update all hardcoded values to variables

* Bump v2.1.0-beta.5

* Bump v2.1.0-beta.6

* Fix hard difference in colors of switch

* Updates of Line UI from 1v

* Updates of UserDrawe from v1

* Remove unused interface IShowCopyIcon

* Date Picker and Filter Layout update from v1

* Close text modal update from v1

* AreUploader update from v1

* Sliders update from V1

* FilterDropdown update from v1

* Calendar Icon update from v1

* Modal update from v1

* Update missing varible colors in sidebar

* Update variable colors in example folder

* Update color variables in storybook

* Update color variables for v1 migration

* Update CSS stylesheet usage in Dark and Light Mode

* Bump v2.1.0-beta.7

* Trying the publish actions/setup-node@v4

* Add replacer_app folder with usage doc

* Update color_replace_usage.md

Screenshots were added and fixed some links

* Update pathfiles list creation

* Add the reference for theming in the replacement documentation

* Update the css file disclamer of only use hexadecimal

* Remove bad commited example in d

--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -8,7 +8,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '16.x'
@@ -18,4 +18,5 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           tag: beta
           package: ./packages/ui-lib/package.json
+          ignore-scripts: false
           # dry-run: true
