--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -71,6 +71,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^2.9.1",
+    "sass": "^1.77.8",
     "styled-components": "^5.3.5"
   },
   "files": [
