--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "2.2.5",
+  "version": "2.2.6-beta.1",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
