--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,13 +4,6 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.5",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.25",
     "history": "^5.3.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -53,6 +46,13 @@
     "url": "https://github.com/future-standard/scorer-ui-kit/issues"
   },
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.25"
   }
 }
