--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -4,16 +4,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@future-standard/icons": "^2.0.1",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.25",
     "history": "^5.3.0",
-    "i18next": "^21.8.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "react-i18next": "^11.18.3",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.4"
   },
@@ -24,11 +15,15 @@
     "@storybook/manager-api": "8.4.4",
     "@storybook/preview-api": "8.4.4",
     "@storybook/addons": "7.6.17",
-    "@storybook/react-webpack5":"^8.4.4",
+    "@storybook/react-webpack5": "^8.4.4",
     "@storybook/preset-create-react-app": "8.4.4",
     "@storybook/react": "8.4.4",
     "storybook-addon-jsx": "^7.3.14",
-    "storybook-dark-mode": "^4.0.2"
+    "storybook-dark-mode": "^4.0.2",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.25"
   },
   "scripts": {
     "start": "npm run storybook",
