--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "dependencies": {
     "@future-standard/icons": "^2.0.1",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^16.11.7",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
@@ -16,8 +15,7 @@
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "react-i18next": "^11.18.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.6.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "8.4.4",
@@ -26,10 +24,11 @@
     "@storybook/manager-api": "8.4.4",
     "@storybook/preview-api": "8.4.4",
     "@storybook/addons": "7.6.17",
-    "@storybook/react-webpack5":"^8.4.4",
-    "@storybook/preset-create-react-app": "8.4.4",
+    "@storybook/react-vite": "^8.4.4",
     "@storybook/react": "8.4.4",
-    "storybook-dark-mode": "^4.0.2"
+    "@vitejs/plugin-react": "^4.3.0",
+    "storybook-dark-mode": "^4.0.2",
+    "vite": "^5.4.0"
   },
   "scripts": {
     "start": "npm run storybook",
