Update @types/react19 since all the blockers have been addressed

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "packages/storybook",
     "packages/example",
     "packages/ui-lib"
-  ]
+  ],
+  "overrides": {
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0"
+  }
 }
