Update react-i18next to the latest version

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "packages/ui-lib"
   ],
   "overrides": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0"
   }
